<resources>
    <string name="app_name" translatable="false">B-card</string>

    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_to_b_card">Welcome to B-card</string>
    <string name="remember">Remember</string>
    <string name="sign_in">Sign In</string>
    <string name="registration_account">Registration account</string>
    <string name="check_all">Check All</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logo" translatable="false">logo</string>
    <string name="registration_panel">registration panel</string>
    <string name="please_enter_login">Please, enter login</string>
    <string name="please_enter_password">Please, enter password</string>
    <string name="please_enter_secret_question">Please, enter secret question</string>
    <string name="please_enter_secret_answer">Please, enter answer to the secret question</string>
    <string name="password_does_not_match">Password doesn\'t match</string>
    <string name="answer_please">Answer, please</string>
    <string name="answer">Answer</string>
    <string name="such_login_not_exist">Such login not exist</string>
    <string name="answer_is_wrong">The answer is wrong</string>
    <string name="add">Add</string>
    <string name="two_value_with_comma">%1s, %2s</string>
    <string name="two_value_without_comma">%1s %2s</string>
    <string name="two_values_together" translatable="false">%1s%2s</string>
    <string name="postal_address">Postal address:\n</string>
    <string name="note">Note: </string>
    <string name="nickname">Nickname: </string>
    <string name="setup">Setup</string>
    <string name="additional_information">Additional Information</string>
    <string name="personal_additional_information">Personal additional information</string>
    <string name="nickname_full_postal_address_timezone_links_and_ets">Nickname, full postal address, timezone, links and ets.</string>
    <string name="education_and_professional_skills">Education and Professional Skills</string>
    <string name="educational_institution_courses_technology_stack">Educational institution, courses, technology stack</string>
    <string name="private_information">Private Information</string>
    <string name="reference">Reference</string>
    <string name="card_settings">Card Settings</string>
    <string name="card_color">Card color</string>
    <string name="corners_round">Corners round</string>
    <string name="form_of_photo">Form of photo</string>
    <string name="text_color">Text color</string>
    <string name="this_contact_is_being_in_you_collection_mark_the_contacts_you_want_to_load">This contact is being in you collection. Mark the contacts you want to load</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="person_information">Person Information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="work_phone">Work phone</string>
    <string name="home_phone">Home phone</string>
    <string name="organization">Organization</string>
    <string name="position_specialty">Position / Specialty</string>
    <string name="email">Email</string>
    <string name="town">Town</string>
    <string name="country">Country</string>
    <string name="background">Background</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="save_to_file">Save to file</string>
    <string name="load_from_file">Load from file</string>
    <string name="load_from_account">Load from account</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="secret_question">Secret question</string>
    <string name="ok">Ok</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="i_forget_password">I forget password</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ad_attribution">Ad</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_items">Add [%d]</string>
    <string name="save_items">Save [%d]</string>
    <string name="please_enter_name">Please, enter name</string>
    <string name="please_enter_surname">Please, enter surname</string>
    <string name="please_enter_phone">Please, enter phone</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="anything_lab" translatable="false">Anything lab</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect</string>
    <string name="save_vcf">Save .vcf</string>
    <string name="save_csv_without_photo">Save .csv (without photo)</string>
    <string name="there_is_no_information_available_n_you_can_add_it_to_the_edit_menu">There is no information available,\n you can add it to the edit menu</string>
    <string name="policy">All the information you enter is stored only on your device. Its confidentiality is ensured by the user authorization mechanism. \n
                    In the process of using the application, requests for permission to use the camera, access the application to the file storage on your device, the ability to make calls, send emails, read your account contacts are used. This is necessary for the full operation of the application and is not used for any other purposes.\n
                    The advertising information displayed in the application is used to finance current and future software development. Thanks for understanding.</string>
    <string name="terms">Terms of use of the application v1.0 \n\n It is important that you read them, because this is where we outline our responsibilities as a mobile app developer,
        as well as your responsibilities as a mobile app user. By installing and using the app, you accept these terms and conditions and are legally bound by them. If you don\'t want
        to be bound by the terms, then you shouldn\'t use our app.\n\n 1.Your responsibilities\n You agree that the data that you provide to us when using the mobile application or
        registering with us (for example, your phone number) will be processed and used in accordance with our Privacy Policy.\n\n 2.Privacy Policy\n We take your privacy very seriously.
        We are not able to transfer your personal data to anyone else. For more information about how we protect your privacy, please read our Privacy Policy.\n\n 3.Our fee\n The use of
        the application is shareware. You are not directly responsible for the costs of using the application. All the revenue we can get comes from the advertiser.\n\n
        4. Copyright\n All content on our website, including the logo, belongs to us and is protected by US and international copyright laws. Please do not copy,
        download or use our materials for either private or commercial use.\n\n 5. Uploading images and other materials\n The application provides only illustrative
        content for decorating elements. All other information is uploaded by the user and must not contain any content that: • Is illegal, defamatory, offensive,
        obscene, discriminatory or otherwise objectionable;\n • Includes information that you are not authorized to disclose or provide in accordance with any law
        or in accordance with contractual or fiduciary relationships (for example, insider information or proprietary and confidential information obtained or
        disclosed as part of an employment relationship or in accordance with non-disclosure agreements);\n • Infringes patents, trademarks, trade secrets,
        copyrights or other proprietary rights.\n\n 6. Responsibility\n We have taken all possible measures to prevent Internet fraud and ensure that any data
        collected from you is kept safe and secure. However, in the extremely unlikely event of your device being hacked, we cannot be held responsible.\n
        Under no circumstances will we be liable for any direct, indirect, incidental or other damages or injuries resulting from your use or downloading
        of any content on our site.</string>

</resources>