<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/border"
    tools:context=".core.dialogs.AdditionalInformationDialog">

    <androidx.cardview.widget.CardView
        style="@style/dialog_style"
        app:cardCornerRadius="@dimen/card_radius_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/paper_07"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_additional_info_title"
                    style="@style/Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:text="@string/additional_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20sp" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_16dp"
                    android:layout_marginTop="@dimen/default_margin_16dp"
                    android:text="@string/personal_additional_information"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_user_additional_info_address"
                    style="@style/EditTextAdditionalInformation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_edit_text_height_120dp"
                    android:hint="@string/nickname_full_postal_address_timezone_links_and_ets" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_16dp"
                    android:layout_marginTop="@dimen/default_margin_16dp"
                    android:text="@string/education_and_professional_skills"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_user_additional_info_prof_skills"
                    style="@style/EditTextAdditionalInformation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_edit_text_height_120dp"
                    android:hint="@string/educational_institution_courses_technology_stack" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_16dp"
                    android:layout_marginTop="@dimen/default_margin_16dp"
                    android:text="@string/private_information"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_user_additional_info_private_info"
                    style="@style/EditTextAdditionalInformation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_edit_text_height_120dp"/>

                <TextView
                    android:id="@+id/textView12"
                    style="@style/Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_16dp"
                    android:layout_marginTop="@dimen/default_margin_16dp"
                    android:text="@string/reference"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edit_user_additional_info_reference"
                    style="@style/EditTextAdditionalInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin_20dp"
                    android:minHeight="48dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_20dp"
                    android:layout_marginBottom="@dimen/default_margin_20dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_additional_info_save"
                        style="@style/Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/default_button_height_50dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_button"
                        android:text="@string/save" />

                    <View
                        android:layout_width="@dimen/default_view_10dp"
                        android:layout_height="@dimen/zero_dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_additional_info_cancel"
                        style="@style/Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/default_button_height_50dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_button"
                        android:text="@string/cancel" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>