<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".core.dialogs.SettingsDialog">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_settings_dialog_upcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/card_radius_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_image_for_three_button"
            android:background="@drawable/square_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_settings_dialog_background"
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_60dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/background"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_view_2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tv_settings_dialog_language"
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_60dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_view_2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tv_settings_dialog_about"
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_60dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_60dp"
        android:layout_marginTop="@dimen/default_margin_16dp"
        android:layout_marginHorizontal="@dimen/default_margin_30dp"
        app:cardCornerRadius="@dimen/card_radius_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_settings_dialog_upcard">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_60dp"
            android:background="@drawable/square_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_settings_dialog_cancel"
                style="@style/Regular"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>